apps/downloads/prowlarr/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-prowlarr
  namespace: downloads
spec:
  ports:
    - port: 9696
      protocol: TCP
      targetPort: http-prowlarr
  selector:
    app: prowlarr
