apps/downloads/prowlarr/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prowlarr-ingress
  namespace: downloads  
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: prowlarr.ting
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: svc-prowlarr
            port:
              number: 9696
